# VaiNaAPI

./: README.md  database.db  pyproject.toml  requirement.txt
src/: app.py
src/templates/: index.html
